--- a/activemq-broker/pom.xml
+++ b/activemq-broker/pom.xml
@@ -91,6 +91,18 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.devcon5</groupId>
+      <artifactId>jackson-jsonb-provider</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.json.bind</groupId>
+      <artifactId>javax.json.bind-api</artifactId>
+    </dependency>
   </dependencies>
 
   <reporting>
