--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <jackson-version>2.13.1</jackson-version>
     <jasypt-version>1.9.3</jasypt-version>
     <jaxb-bundle-version>2.2.11_1</jaxb-bundle-version>
+    <jaxrs-api-version>2.1.1</jaxrs-api-version>
     <jetty9-version>9.4.45.v20220203</jetty9-version>
     <jetty-version>${jetty9-version}</jetty-version>
     <jmdns-version>3.4.1</jmdns-version>
@@ -81,6 +82,9 @@
     <josql-version>1.5_5</josql-version>
     <!-- for json-simple use same version as jolokia uses -->
     <json-simple-version>1.1.1</json-simple-version>
+    <json-api.version>1.0</json-api.version>
+    <json-bind-api.version>1.0</json-bind-api.version>
+    <jsonassert-version>1.5.0</jsonassert-version>
     <junit-version>4.13.2</junit-version>
     <hamcrest-version>1.3</hamcrest-version>
     <karaf-version>4.2.11</karaf-version>
@@ -1071,7 +1075,26 @@
         <artifactId>org.apache.servicemix.bundles.josql</artifactId>
         <version>${josql-version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>${jaxrs-api-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.skyscreamer</groupId>
+        <artifactId>jsonassert</artifactId>
+        <version>${jsonassert-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.json</groupId>
+        <artifactId>javax.json-api</artifactId>
+        <version>${json-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.json.bind</groupId>
+        <artifactId>javax.json.bind-api</artifactId>
+        <version>${json-bind-api.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
