--- a/pom.xml
+++ b/pom.xml
@@ -1091,10 +1091,15 @@
         <version>${json-api.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.json.bind</groupId>
-        <artifactId>javax.json.bind-api</artifactId>
-        <version>${json-bind-api.version}</version>
+        <groupId>org.apache.geronimo.specs</groupId>
+        <artifactId>geronimo-jsonb_1.0_spec</artifactId>
+        <version>1.1</version>
       </dependency>
+<!--      <dependency>-->
+<!--        <groupId>javax.json.bind</groupId>-->
+<!--        <artifactId>javax.json.bind-api</artifactId>-->
+<!--        <version>${json-bind-api.version}</version>-->
+<!--      </dependency>-->
     </dependencies>
   </dependencyManagement>
 
